--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ nav a:hover {
 }
 
 .sub-nav {
-    margin-top: 3em;
+    margin-top: 5em;
     text-align: center;
 }
 
@@ -35,4 +35,39 @@ nav a:hover {
     padding: 0.5em 1em;
     text-decoration: none;
     border-radius: 5px;
+}
+
+.posts {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 5em;
+}
+
+.title {
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+.post{
+    padding: 0 6px;
+    float: left;
+    width: 24%;
+    margin-bottom: 1em;
+}
+
+.post img {
+    width: 100%;
+    height: auto;
+    filter: grayscale(100%);
+    transition: 1s;
+}
+
+.post-item img:hover {
+   filter: grayscale(0);
+   transform: scale(1.05);
+}
+
+.desc {
+    padding: 15px;
+    text-align: center;
 }
