--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ nav a:hover {
     color: white;
     background-color: rgb(38, 38, 228);
     margin: 0 0.8em;
-    font-size: 18px;
     padding: 0.5em 1em;
     text-decoration: none;
     border-radius: 5px;
@@ -71,3 +70,40 @@ nav a:hover {
     padding: 15px;
     text-align: center;
 }
+
+/* Search Bar */
+.search {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3em;
+  }
+  
+.searchTerm {
+    width: 40%;
+    border: 3px solid #00B4CC;
+    border-right: none;
+    padding: 5px;
+    height: 20px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+  
+.searchTerm:focus{
+    color: #00B4CC;
+}
+  
+.searchButton {
+    width: 40px;
+    height: 36px;
+    border: 1px solid #00B4CC;
+    background: #00B4CC;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+  
