--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ nav a:hover {
 
 .post img {
     width: 100%;
-    height: auto;
+    height: 250px;
     filter: grayscale(100%);
     transition: 1s;
 }
@@ -68,8 +68,32 @@ nav a:hover {
 
 .desc {
     padding: 15px;
-    text-align: center;
+    /* text-align: center; */
 }
+
+/* PostItem */
+.postitem {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 3em;
+    line-height: 2em;
+}
+
+.postitem h1 {
+    text-align: center;
+    margin: 1em 0;
+}
+
+
+
+.shinobi img {
+    width: 100%;
+}
+/* .postitem img {
+    width: 80%;
+    margin: 0 auto;
+    height: 400px;
+} */
 
 /* Search Bar */
 .search {
