--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     font-family: 'Noto Sans', sans-serif;
 }
 nav {
-    background-color: rgb(38, 38, 228);
+    background-color: #2626e4;
     padding: 1.5em 2em;
     text-align: center;
 }
@@ -39,7 +39,7 @@ nav a:hover {
 .posts {
     width: 70%;
     margin: 0 auto;
-    margin-top: 2em;
+    margin-top: 5em;
 }
 
 .title {
@@ -130,4 +130,40 @@ nav a:hover {
     cursor: pointer;
     font-size: 20px;
 }
-  
+
+.addpost form {
+    width: 80%;
+    margin: 0 auto;
+    padding: .5em;
+    font-size: 1.2em;
+}
+
+.input-control {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.2em ;
+}
+
+.addpost {
+    margin-top: 2em;
+}
+.input-control button {
+    padding: 12px;
+    border: none;
+    font-size: .9em;
+    font-weight: 600;
+    background-color: #2626e4;
+    color: white;
+    border-radius: 5px;
+}
+
+.input-control input {
+    padding: 12px;
+    border: none;
+    border-bottom: 1px solid black;
+    /* border-radius: 5px ; */
+}
+
+.input-control input:focus {
+    outline: 0;
+}
