update form input and style

--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,14 @@ nav a:hover {
 .input-control input:focus {
     outline: 0;
 }
+
+.input-control textarea {
+    padding: 12px;
+    border: none;
+    border-bottom: 1px solid black;
+    /* border-radius: 5px ; */
+}
+
+.input-control textarea:focus {
+    outline: 0;
+}
