--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ nav a:hover {
 .posts {
     width: 70%;
     margin: 0 auto;
-    margin-top: 5em;
+    margin-top: 3em;
 }
 
 .title {
@@ -158,7 +158,7 @@ nav a:hover {
 }
 
 .input-control input {
-    padding: 12px;
+    padding: 12px 0;
     border: none;
     border-bottom: 1px solid black;
     /* border-radius: 5px ; */
@@ -169,7 +169,7 @@ nav a:hover {
 }
 
 .input-control textarea {
-    padding: 12px;
+    padding: 12px 0;
     border: none;
     border-bottom: 1px solid black;
     /* border-radius: 5px ; */
@@ -177,4 +177,16 @@ nav a:hover {
 
 .input-control textarea:focus {
     outline: 0;
+}
+
+.about {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 3em;
+    font-size: 1.4em;
+    line-height: 1.6em;
+}
+
+.about h2 {
+    margin-bottom: 1em;
 }
