--- a/src/App.css
+++ b/src/App.css
@@ -54,15 +54,18 @@ nav a:hover {
     margin-bottom: 1em;
 }
 
+.post:hover {
+    cursor: pointer;
+}
+
 .post img {
     width: 100%;
     height: 250px;
-    filter: grayscale(100%);
     transition: 1s;
 }
 
 .post-item img:hover {
-   filter: grayscale(0);
+   filter: grayscale(100%);
    transform: scale(1.05);
 }
 
