--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Noto Sans', sans-serif;
-}
-nav {
-    background-color: #2626e4;
-    padding: 1.5em 2em;
-    text-align: center;
+    font-family: 'PT Sans', sans-serif;
 }
 
-nav a {
-    margin: 0 2em;
+nav {
+    background-color: #2626e4;
+}
+
+.nav-items {
+    width: 72%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5em 2em;
+}
+
+.nav-items a {
+    margin: 0 1em;
     text-decoration: none;
     color: white;
     font-size: 1.5em;
 }
 
-nav a:hover {
+.nav-items a:hover {
     border-bottom: 3px solid white;
 }
 
