--- a/src/App.css
+++ b/src/App.css
@@ -203,11 +203,15 @@ nav {
     width: 50%;
 }
 
+.address {
+    margin: auto;
+}
+
 .box, .phone, .envelope {
     display: flex;
     align-items: center;
     padding: 0 1em 0 0;
-    margin-bottom: .6em;
+    margin-bottom: 1em;
 }
 
 .icon {
@@ -225,7 +229,7 @@ nav {
     width: 100%;
 }
 
-.input-group button {
+.send-btn {
     padding: 10px;
     margin-top: 10px ;
     color: white;
